tests/paczka1/fuzzy1/81643041.err
Error in line 6: 1aQWwfY A910 14,6
Error in line 7: A910 A939 72,0
Error in line 16: 5Q12mhgOZh A939 6,4
Error in line 17: 5Q12mhgOZh A910 98,9
Error in line 9: 0Su1ANX459J S315 21,9
Error in line 12: tT7 A939 9,5
Error in line 22: 5Q12mhgOZh S788 20,6
Error in line 10: 1aQWwfY S315 67,0
Error in line 33: 5Q12mhgOZh S315 94,72
Error in line 36: umH3uXvV S788 59,9
Error in line 38: 5Q12mhgOZh S315 397,5
